# cg-ufrn

./: CMakeLists.txt  Makefile  README.md
src/: Makefile  aaindex.c  aargb.c  alpha.c  alpha3D.c  checker.c  clip.c  cube.c  double.c  hello.c  light.c  list.c  mipmap.c  planet.c  robot.c  smooth.c  texgen.c  torus.c
